--- a/notes/diary.tex
+++ b/notes/diary.tex
@@ -86,5 +86,19 @@ For mathematical analysis, read:
 \item \href{https://www.cmu.edu/cee/convergence/preprints/UniversalBehaviorModulatedStripePatterns.pdf}{The universal behavior of modulated stripe patterns (2022)}
 \end{itemize}
 The 2008 paper might hint at what patterns are not "covered" by Cross Newell equation
+\section{10/03}
+\begin{itemize}
+\item Continue reding the selected papers (there's 4- 1984, 1996, 2008, 2022).
+\item Check out Strogatz lectures on Asymptotics
+\item Ask Shankar about the busse balloon. Get clarification about pictorial meaning of varying phase.
+\item Discuss machine learning idea. My pitch is to start by reproducing the results of Champion's paper.
+\item For PIML this week, recreate one of Champion's experiments, and show to class. In parallel, play around with initial conditions of your SH equation- see which ones work.
+\item Make program work on ellipse. Ask shankar about his inits for his pattern, so you can try to reproduce.
+\item For the indicator function over ellipse, consider algorithm like: If inside ellipse, val=R. If within epsilon/2 of ellipse, val = .5, etc.
+\item what is single roll exactly? is it one roll, or multiple rolls aligned in a parallel fashion of the same wavelength?
+\item what is orientational degeneracy?
+\item what is "locally periodic"?
+\item what is horizontal boundary, what is the lateral direction?
+\end{itemize}
 \end{document}
 
