--- a/notes/ML_notes.tex
+++ b/notes/ML_notes.tex
@@ -280,7 +280,8 @@ This seems to only contain the sparse regression idea. May need to use SINDyPy a
 \subsubsection{Reaction Diffusion- SINDyPy Results (Optional)}
 There is an open source package that is well maintained for these types of experiments.
 \href{https://github.com/dynamicslab/pysindy}{SINDyPy}
-See this! \href{https://pysindy.readthedocs.io/en/stable/examples/10_PDEFIND_examples.html#test-pde-functionality-on-2d-reaction-diffusion-system}{PySINDy examples} 
+See this! \href{https://pysindy.readthedocs.io/en/stable/examples/10_PDEFIND_examples.html#test-pde-functionality-on-2d-reaction-diffusion-system}{PySINDy examples}
+also \href{https://arxiv.org/pdf/2111.08481.pdf)}{PySINDy paper}
 
 \end{document}
 
