--- a/notes/sh_numerics_3.tex
+++ b/notes/sh_numerics_3.tex
@@ -116,6 +116,7 @@ def integrateSH(w0,R,dt,nSteps,L,o4=False):
 \end{verbatim}
 
 \textbf{Note: It seems the Forward Euler scheme is working better than RK4}
+\textbf{Scripts to generate these files can be found here \href{https://github.com/EMcDugald/convection_patterns/blob/master/code/SH_numerics_notebooks/solve_SH2.ipynb}{python} and here \href{https://github.com/EMcDugald/convection_patterns_matlab/blob/master/tst_cf.m}{matlab}}
 
 \section{Comparison with Chebfun}
 \subsection{Chebfun vs Python 1}
