--- a/notes/Analysis_notes.tex
+++ b/notes/Analysis_notes.tex
@@ -84,7 +84,7 @@
             \nabla_x w(\theta ; X,Y,T) &= (\bm{k}\partial_\theta + \eta^2 \nabla_{\bm{X}})w(\theta;X,Y,T)\\
             \partial_t w(\theta; X,Y,T) &= (\eta^2\Theta_T\partial_\theta +\eta^4\partial_T)w(\theta;X,Y,T), \quad (4)
         \end{align*}
-        \textbf{Need to figure out how these are validated!}.
+        \textbf{Easy to verify, use chain rule, with w as a function of the 4 variables, and apply the substitutions}
         and solving the resulting ODEs for $w^{(0)}, w^{(p)}$ at the successive orders $\eta^{2p}$ for $p=0,1,2,\dots$, and demanding that the asymptotic expansion (3) has that each $w^{(p)}$ is $2\pi$-periodic in $\theta$. This leads to solvability conditions that are successive approximations to the dynamic equations for the phase variable $\Theta(X,Y,T)$. Unless $R$ is close to $R_c$, the amplitude $A$ is determined algebraicly by the local wavenumber. Otherwise it satisfies a PDE.
     \item We introduce the coordinates $\alpha(X,Y)=\Theta$ and $\beta(X,Y)$,
         \begin{align*}
