--- a/notes/ML_notes.tex
+++ b/notes/ML_notes.tex
@@ -283,5 +283,9 @@ There is an open source package that is well maintained for these types of exper
 See this! \href{https://pysindy.readthedocs.io/en/stable/examples/10_PDEFIND_examples.html#test-pde-functionality-on-2d-reaction-diffusion-system}{PySINDy examples}
 also \href{https://arxiv.org/pdf/2111.08481.pdf)}{PySINDy paper}
 
+\section{PDEFind for Swift Hohenberg}
+\href{https://royalsocietypublishing.org/doi/10.1098/rspa.2016.0446}{Another sparse regression example for SH}
+\href{https://digital.lib.washington.edu/researchworks/bitstream/handle/1773/45435/deSilva_washington_0250E_21269.pdf?sequence=1}{Crian de Silva stuff}
+
 \end{document}
 
