--- a/notes/diary.tex
+++ b/notes/diary.tex
@@ -100,5 +100,12 @@ The 2008 paper might hint at what patterns are not "covered" by Cross Newell equ
 \item what is "locally periodic"?
 \item what is horizontal boundary, what is the lateral direction?
 \end{itemize}
+\section{10/22}
+Seems the main ideas for this work are the following
+\begin{itemize}
+\item 1984, 1996, 2022 paper
+\item 2003 and trefethen paper
+\item Sindy + autoencoder paper, pdefind paper, various pysindy results
+\end{itemize}
 \end{document}
 
