--- a/code/SH_numerics_notebooks/solve_SH.ipynb
+++ b/code/SH_numerics_notebooks/solve_SH.ipynb
@@ -165,7 +165,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<matplotlib.image.AxesImage at 0x7fc71570a910>"
+      "text/plain": "<matplotlib.image.AxesImage at 0x7fb80aa1c160>"
      },
      "execution_count": 4,
      "metadata": {},
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -736,12 +736,12 @@
     "W3 = integrateSH(w0,R,dt,nSteps,L)\n",
     "fig3, ax3 = plt.subplots(nrows=1, ncols=1, figsize=(3,3))\n",
     "ax3.imshow(W3)\n",
-    "plt.savefig(\"/Users/edwardmcdugald/Research/convection_patterns/code/figs/sh_num_tsts_1018/mySH3.pdf\")\n",
+    "plt.savefig(\"/Users/edwardmcdugald/Research/convection_patterns_wip/code/figs/sh_num_tsts_1018/mySH3.pdf\")\n",
     "\n",
     "W3_o4 = integrateSH(w0,R,dt,nSteps,L,o4=True)\n",
     "fig3_o4, ax3_o4 = plt.subplots(nrows=1, ncols=1, figsize=(3,3))\n",
     "ax3_o4.imshow(W3_o4)\n",
-    "plt.savefig(\"/Users/edwardmcdugald/Research/convection_patterns/code/figs/sh_num_tsts_1018/mySH3_o4.pdf\")\n",
+    "plt.savefig(\"/Users/edwardmcdugald/Research/convection_patterns_wip/code/figs/sh_num_tsts_1018/mySH3_o4.png\")\n",
     "\n",
     "#Running the Methods on the Ellipse\n",
     "R=.5*(-1./(1.+np.exp(-((X-10*np.pi)**2+2*(Y-10*np.pi)**2-256.)))+1.)\n",
@@ -749,12 +749,12 @@
     "W3_Ell = integrateSH(w0,R,dt,nSteps,L)\n",
     "fig3_Ell, ax3_Ell = plt.subplots(nrows=1, ncols=1, figsize=(3,3))\n",
     "ax3_Ell.imshow(W3_Ell)\n",
-    "plt.savefig(\"/Users/edwardmcdugald/Research/convection_patterns/code/figs/sh_num_tsts_1018/mySH3_Ell.pdf\")\n",
+    "plt.savefig(\"/Users/edwardmcdugald/Research/convection_patterns_wip/code/figs/sh_num_tsts_1018/mySH3_Ell.pdf\")\n",
     "\n",
     "W3_o4_Ell = integrateSH(w0,R,dt,nSteps,L,o4=True)\n",
     "fig3_o4_Ell, ax3_o4_Ell = plt.subplots(nrows=1, ncols=1, figsize=(3,3))\n",
     "ax3_o4_Ell.imshow(W3_o4_Ell)\n",
-    "plt.savefig(\"/Users/edwardmcdugald/Research/convection_patterns/code/figs/sh_num_tsts_1018/mySH3_o4_Ell.pdf\")"
+    "plt.savefig(\"/Users/edwardmcdugald/Research/convection_patterns_wip/code/figs/sh_num_tsts_1018/mySH3_o4_Ell.pdf\")"
    ],
    "metadata": {
     "collapsed": false,
